Adding write down endpoint
- Content entity
- Authentication
