# cmd/api/server/middleware.go
@@ -9,18 +9,22 @@ import (
 	"github.com/CarlosHenriqueDamasceno/wishtrack/cmd/api/utils"
 )
 
-const userCtx = "user"
+type userCtxType string
 
-func (api *Api) AuthTokenMiddleware(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+const userCtx userCtxType = "user"
+
+func (api *Api) AuthTokenMiddleware(next http.HandlerFunc) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
 		authHeader := r.Header.Get("Authorization")
 		if authHeader == "" {
+			api.logger.Info("authorization error no header")
 			utils.RespondError(fmt.Errorf("authorization header is missing"), http.StatusUnauthorized, w)
 			return
 		}
 
 		parts := strings.Split(authHeader, " ")
 		if len(parts) != 2 || parts[0] != "Bearer" {
+			api.logger.Info("authorization error invalid header", "header", authHeader)
 			utils.RespondError(fmt.Errorf("authorization header is missing"), http.StatusUnauthorized, w)
 			return
 		}
@@ -30,11 +34,12 @@ func (api *Api) AuthTokenMiddleware(next http.Handler) http.Handler {
 		token := parts[1]
 		user, err := api.userService.ValidateToken(ctx, token)
 		if err != nil {
+			api.logger.Warn("authorization error", "error", err)
 			utils.RespondError(err, http.StatusUnauthorized, w)
 			return
 		}
 
 		ctx = context.WithValue(ctx, userCtx, user)
 		next.ServeHTTP(w, r.WithContext(ctx))
-	})
+	}
 }
