# cmd/api/server/server.go
@@ -6,25 +6,34 @@ import (
 	"net/http"
 
 	_ "github.com/CarlosHenriqueDamasceno/wishtrack/etc/doc"
+	"github.com/CarlosHenriqueDamasceno/wishtrack/internal/content"
 	"github.com/CarlosHenriqueDamasceno/wishtrack/internal/user"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
 )
 
 type Api struct {
-	router      *http.ServeMux
-	userService user.Service
-	config      *Config
-	logger      *slog.Logger
+	router         *http.ServeMux
+	userService    user.Service
+	contentService content.Service
+	config         *Config
+	logger         *slog.Logger
 }
 
 // Creates and starts a new Api.
 // This method registers all handlers in the Api
-func NewApi(router *http.ServeMux, config *Config, logger *slog.Logger, userService user.Service) *Api {
+func NewApi(
+	router *http.ServeMux,
+	config *Config,
+	logger *slog.Logger,
+	userService user.Service,
+	contentService content.Service,
+) *Api {
 	s := &Api{
-		router:      router,
-		userService: userService,
-		config:      config,
-		logger:      logger,
+		router:         router,
+		userService:    userService,
+		contentService: contentService,
+		config:         config,
+		logger:         logger,
 	}
 	s.setupRoutes()
 	return s
@@ -40,4 +49,5 @@ func (a *Api) setupRoutes() {
 
 	a.router.HandleFunc("POST /api/v1/register", a.handleRegister)
 	a.router.HandleFunc("POST /api/v1/login", a.handleLogin)
+	a.router.HandleFunc("POST /api/v1/write-down", a.AuthTokenMiddleware(a.handleWriteDown))
 }
